--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,9 +1,9 @@
 from mysql:latest
 
-ENV MYSQL_ROOT_PASSWORD=ubuntu
-ENV MYSQL_DATABASE=Empresa
+ENV MYSQL_ROOT_PASSWORD=Senha123
+ENV MYSQL_DATABASE=Xablau
 ENV MYSQL_USER=app
-ENV MYSQL_PASSWORD=ubuntu
+ENV MYSQL_PASSWORD=Senha123
 
 COPY sql.sql /docker-entrypoint-initidb.d/
 
